assets/templates/template.css
:root {
  /* rose pine */
  --base: #191724;
  --surface: #1f1d2e;
  --overlay: #26233a;
  --muted: #6e6a86;
  --subtle: #908caa;
  --text: #e0def4;
  --love: #eb6f92;
  --gold: #f6c177;
  --rose: #ebbcba;
  --pine: #31748f;
  --foam: #9ccfd8;
  --iris: #c4a7e7;
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
  transition-timing-function: cubic-bezier(.4, 0, .2, 1);
  transition-duration: .15s;
}

body {
  font-family: 'Cascadia Code', monospace;
  font-size: 1.1rem;
  background-color: var(--base);
  color: var(--text);
  line-height: 1.8;
}

.container {
  max-width: 1100px;
  margin: 0 auto;
  padding-inline: 2rem;
  padding-block: 1rem;
  background-color: var(--surface);
  min-height: 100vh;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Headers: */
:is(h1, h2, h3, h4, h5, h6) {
  margin-top: 1rem;
}

:is(h1, h2, h3, h4, h5, h6)+ :is(h1, h2, h3, h4, h5, h6) {
  margin-top: 0;
}

h1:first-of-type {
  margin-top: 0;
}

h1 {
  text-decoration: none;
  color: var(--iris);
  font-size: 3rem;
}

h2 {
  color: var(--foam);
  font-size: 2.5rem;
}

h3 {
  color: var(--rose);
  font-size: 2rem;
}

h4 {
  color: var(--gold);
  font-size: 1.5rem;
}

h5 {
  color: var(--pine);
  font-size: 1rem;
}

/* Code: */
code {
  color: var(--gold);
  background: var(--base);
  line-height: 2.5em;
  padding-inline: 0.8rem;
  padding-block: 0.3rem;
  border-radius: 4px;
}

/* Code Block */
pre code {
  line-height: 1.5em;
}

/* Bullets: */
ul {
  margin-left: 1rem;
}

li {
  list-style-type: '-';
  padding-inline-start: 1ch;
}

/* Tables: */
table,
thead,
tbody,
tfoot,
tr,
th,
td {
  padding: 0;
  border-spacing: 0;
}

table {
  text-indent: 0;
  margin-top: 0.5rem;
  margin-bottom: 1rem;
  padding-inline: 1em;
  padding-top: 0.5em;
  padding-bottom: 1em;
  background: var(--base);
  border-radius: 4px;
  line-height: 2rem;
}

tr:nth-child(even) {
  background: var(--overlay);
}

td {
  padding-inline: 1rem;
  padding-block: 0.4rem;
}

/* Links: */
a {
  color: var(--love);
  text-decoration: none;
  transition: color 0.3s ease;
}

a:hover {
  color: var(--foam);
}

/* Comment: */
blockquote {
  color: var(--muted);
  padding-left: 1em;
  border-left: .25em solid var(--muted);
}

img:not(.emoji) {
  max-width: 100%;
  height: auto;
  display: block;
  margin: 1rem 0;
  border-radius: 4px;
}

/* Top Bar Thing: */
.top-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 1rem;
}

.home-button {
  background-color: var(--overlay);
  height: 48px;
  display: inline-flex;
  align-items: center;
  border: none;
  padding: 0.5rem 1rem;
  border-radius: 6px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.home-button:hover {
  background-color: transparent;
}

.home-button svg {
  width: 24px;
  height: 24px;
  stroke: var(--foam);
  stroke-width: 2;
  margin-right: 0.5rem;
}

.home-button span {
  color: var(--foam);
  font-weight: bold;
}

.search-container {
  border: none;
  display: inline-flex;
  align-items: center;
  background-color: var(--overlay);
  border-radius: 6px;
  height: 48px;
  transition: background-color 0.3s ease;
}

.search-container:hover {
  background-color: var(--surface);
}

.search-input {
  background: transparent;
  border: none;
  color: var(--text);
  outline: none;
  width: 200px;
  padding: 0.5rem;
  font-size: 1rem;
}

.search-input::placeholder {
  color: var(--muted);
}

.search-button {
  background: none;
  border: none;
  cursor: pointer;
  display: flex;
  align-items: center;
  padding: 0.25rem;
  height: 100%;
}

.search-button svg {
  width: 20px;
  height: 20px;
  stroke: var(--foam);
  stroke-width: 2;
}

@media (max-width: 750px) {
  body {
    font-size: 0.9rem;
  }

  h1 {
    font-size: 2.5rem;
  }

  h2 {
    font-size: 2rem;
  }

  h3 {
    font-size: 1.5rem;
  }

  h4 {
    font-size: 1.25rem;
  }

  h5 {
    font-size: 1rem;
  }

  .container {
    padding-inline: 1rem;
  }

  .search-input {
    width: 150px;
  }
}

